# esp32_lever_frame

./: .gitignore  .gitmodules  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  README.md  bump_version.sh  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32p4
components/display_hal/: CMakeLists.txt  Kconfig  display_hal.c  display_hal.h  idf_component.yml
components/esp32_p4_wifi6_touch_lcd_4_3/: CMakeLists.txt  esp32_p4_wifi6_touch_lcd_4_3.c  idf_component.yml
components/lcc/: CMakeLists.txt  README.md
components/lcc_drivers/: CMakeLists.txt  can_drivers.c  can_drivers.h  i2c_drivers.c  i2c_drivers.h  lcc_drivers.c  lcc_drivers.h  tcp_drivers.c  tcp_drivers.h
components/lever_core/: CMakeLists.txt  config_manager.c  config_manager.h  controller.c  controller.h  default_prototypical_config.h  interlocking.c  interlocking.h  state_manager.c  state_manager.h  system_events.c  system_events.h
components/openlcb_node/: CMakeLists.txt  can_user_config.h  cdi_array.h  openlcb_integration.c  openlcb_integration.h  openlcb_user_config.c  openlcb_user_config.h
components/ui_lever_frame/: CMakeLists.txt  lever.c  lever.h  lever_frame.c  lever_frame.h  ui_overlays.c  ui_overlays.h
components/ui_porting/: CMakeLists.txt  ui_porting.c  ui_porting.h
docs/: ARCHITECTURE.md  USER_GUIDE.md
docs/json/: prototypical_interlocking.json
main/: CMakeLists.txt  Kconfig.projbuild  can_user_config.h  cdi_array.h  config_manager.c  config_manager.h  controller.c  controller.h  idf_component.yml  interlocking.c  interlocking.h  lever.c  lever.h  lever_frame.c  lever_frame.h  main.c  openlcb_integration.c  openlcb_integration.h  openlcb_user_config.c  openlcb_user_config.h  state_manager.c  state_manager.h  tcp_user_config.h  web_server.c  web_server.h
main/test/: CMakeLists.txt  test_config.c  test_controller.c  test_interlocking.c
main/test/mocks/: esp_err.h  esp_event.h  esp_log.h  lvgl.h  mock_nvs.c  nvs.h  nvs_flash.h
main/web/: index.html
utils/: bump_version.sh  pre_release_check.sh
